[gd_scene load_steps=12 format=3 uid="uid://bnvj5la80lo4b"]

[ext_resource type="Texture2D" uid="uid://bjgs7af1jyxek" path="res://textures/crosshair.png" id="1_cfom6"]
[ext_resource type="Script" uid="uid://dg2u8okb104in" path="res://general_scripts/player_ui.gd" id="1_ehg4m"]
[ext_resource type="PackedScene" uid="uid://so07d5tab0vt" path="res://ui/pause_menu.tscn" id="3_iwa1g"]
[ext_resource type="PackedScene" uid="uid://gtjg5j1md1k2" path="res://ui/task_ui.tscn" id="3_lp0io"]
[ext_resource type="PackedScene" uid="uid://csv2u4nuw7iop" path="res://ui/safe_ui.tscn" id="4_lp0io"]
[ext_resource type="AudioStream" uid="uid://cf6bgx7t82yde" path="res://sounds/657947__lilmati__horror-inspect-sound-ui-or-in-game-notification-01.wav" id="6_hff70"]
[ext_resource type="AudioStream" uid="uid://bb1mipoly5ufs" path="res://sounds/370961__cabled_mess__click-03_minimal-ui-sounds.wav" id="7_f7sc3"]
[ext_resource type="AudioStream" uid="uid://2fapb1g4wyd2" path="res://sounds/750607__deadrobotmusic__notification-sound-1.wav" id="8_f7sc3"]

[sub_resource type="Animation" id="Animation_ykvpg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_lp0io"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hff70"]
_data = {
&"RESET": SubResource("Animation_ykvpg"),
&"fade": SubResource("Animation_lp0io")
}

[node name="player_ui" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ehg4m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="crosshair" type="CenterContainer" parent="CanvasLayer"]
offset_right = 1154.0
offset_bottom = 647.0

[node name="crosshairtex" type="TextureRect" parent="CanvasLayer/crosshair"]
layout_mode = 2
texture = ExtResource("1_cfom6")

[node name="task_ui" parent="." instance=ExtResource("3_lp0io")]

[node name="safe_ui" parent="." instance=ExtResource("4_lp0io")]

[node name="pause_menu" parent="." instance=ExtResource("3_iwa1g")]

[node name="fade_ui" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="fade_ui"]
offset_right = 1153.0
offset_bottom = 649.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="fade_ui"]
libraries = {
&"": SubResource("AnimationLibrary_hff70")
}

[node name="interact" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_hff70")

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_f7sc3")

[node name="task_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_f7sc3")

[connection signal="pressed" from="safe_ui/confirm" to="." method="confirm_password"]
[connection signal="pressed" from="safe_ui/back" to="." method="exit_safe"]
[connection signal="mouse_entered" from="pause_menu/resume" to="." method="play_hover"]
[connection signal="pressed" from="pause_menu/resume" to="." method="resume_game"]
[connection signal="mouse_entered" from="pause_menu/settings" to="." method="play_hover"]
[connection signal="mouse_entered" from="pause_menu/controls" to="." method="play_hover"]
[connection signal="mouse_entered" from="pause_menu/main_menu" to="." method="play_hover"]
[connection signal="mouse_entered" from="pause_menu/quit_game" to="." method="play_hover"]
[connection signal="pressed" from="pause_menu/quit_game" to="." method="quit_game"]

[editable path="safe_ui"]
[editable path="pause_menu"]
